JDK 25 and Angular 19 update